crates/ic-lint/tests/snapshots/bounds_check__exception_out_of_bounds.snap
---
source: crates/ic-lint/tests/bounds_check.rs
expression: test_lint_hir(source)
---
⨯ bounds-check: value violates bounds of type `string<4>`
  @ test.idl:3:18

 2 │ exception TestException {
 3 │     @default("12345")
   │              ˆˆˆˆˆˆˆ value violates type bound
 4 │     string<4> my_string;
 5 │ };
