crates/ic-lint/tests/snapshots/bounds_check__map_out_of_bounds.snap
---
source: crates/ic-lint/tests/bounds_check.rs
expression: test_lint_hir(source)
---
⨯ bounds-check: value violates bounds of type `map<uint8, uint8, 1>`
  @ test.idl:3:14

 2 │ struct Bad {
 3 │     @default({{1, 1}, {2, 2}})
   │              ˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆ value violates type bound
 4 │     map<uint8, uint8, 1> my_map;
 5 │ };
