crates/ic-lint/tests/snapshots/bounds_check__sequence_out_of_bounds.snap
---
source: crates/ic-lint/tests/bounds_check.rs
expression: test_lint_hir(source)
---
⨯ bounds-check: value violates bounds of type `sequence<int32, 3>`
  @ test.idl:3:1

 3 │ const sequence<int32, 3> const_sequence = {1, 2, 3, 4};
   │ ˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆ value violates type bound
 4 │ const sequence<sequence<int32, 3>, 1> const_sequence2 = {{1, 2, 3, 4}};

⨯ bounds-check: value violates bounds of type `sequence<sequence<int32, 3>, 1>`
  @ test.idl:4:1

 3 │ const sequence<int32, 3> const_sequence = {1, 2, 3, 4};
 4 │ const sequence<sequence<int32, 3>, 1> const_sequence2 = {{1, 2, 3, 4}};
   │ ˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆ value violates type bound
 5 │ 
 6 │ struct Bad {

⨯ bounds-check: value violates bounds of type `sequence<int32, 3>`
  @ test.idl:7:14

 6 │ struct Bad {
 7 │     @default({1, 2, 3, 4})
   │              ˆˆˆˆˆˆˆˆˆˆˆˆ value violates type bound
 8 │     sequence<int32, 3> my_seq;
 9 │ };
